Keyboard fixes on iOS

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -10,16 +10,11 @@ ion-header {
   }
 }
 
-body.keyboard-is-open .hide-on-keyboard-open{
-  display: none;
 }
 
-/*
-body.keyboard-is-open .scroll-content:not(.keyboard-immune){
-  // TODO: Make this work with something else, make it % also
-  //padding-bottom:300px!important;
-  margin-bottom: $keyboard-margin-push-amount!important;    
-}*/
+body.keyboard-is-open .hide-on-keyboard-open{
+  display: none!important;
+}
 
 ion-menu {
   ion-header {
